--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         return;
       }
       const obj = questions.pop();
-      questionCourante = `De quelle couleur est ${obj.objet} ?`;
+      questionCourante = `${obj.objet}`;
       reponseCourante = `Réponse : ${obj.couleur}`;
     }
 
